Bug 1870243 - Cherry-pick https://gitlab.freedesktop.org/cairo/cairo/-/merge_requests/256 to correctly reset the current operator when several added highlights in a pdf are printed r=jfkthame

Differential Revision: https://phabricator.services.mozilla.com/D197584